Fix the css alignment of the Preview Measurements table header.
Issue: BMS-3944

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1160,8 +1160,12 @@ a.fbk-edit-experiment{
 
 /* Measurements Tab */
 
-.mdt-header {
+.edit-measurements-panel .mdt-header {
     height: 75px;
+}
+
+.preview-measurements-panel .mdt-header {
+    height: 45px;
 }
 
 .mdt-header .dataTables_length,
